<resources>
    <string name="app_name">COVID Buddy</string>
    <string name="date">Date</string>
    <string name="result">Result</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="local_hint">Insert a location</string>
    <string name="photo_hint">Insert a photograph of your test</string>
    <string name="date_hint">dd/mm/yyyy</string>
    <string name="local">Local</string>
    <string name="photo">Photograph (Optional)</string>
    <string name="submit">SUBMIT</string>
    <string name="invalid_result">Please choose a Result</string>
    <string name="invalid_local">Please enter a valid Location</string>
    <string name="invalid_local_result">Result and Location must be valid</string>
    <string name="test">COVID-19 Test</string>
    <string name="dashboard">Dashboard</string>
    <string name="register_test">Test Register</string>
    <string name="list_test">Test Listing</string>
    <string name="contacts">Contacts</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="slogan">Inform yourself. Protect yourself</string>
    <string name="test_details">Test Details</string>
    <string name="vaccination">Vaccination</string>
    <string name="danger">Am I in danger?</string>
    <string name="total_doses">Total doses administered</string>
    <string name="total_doses1">First doses</string>
    <string name="total_doses2">Fully vaccinated</string>
    <string name="simulator">CHECK IF YOU ARE IN PHASE 1 OR 2 OF THE VACCINATION PLAN ></string>
    <string name="sort">Sort registration date:</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="dialogTitle">Test Register</string>
    <string name="dialogMessage">Are you sure you want to register this Test?</string>
    <string name="cancel">Cancel</string>
    <string name="confirmed">Confirmed Cases</string>
    <string name="death">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="hospitalized">Hospitalized</string>
    <string name="hospitalized_uci">Hospitalized UCI</string>
    <string name="rt">National R(t)</string>
    <string name="contacts_tele">Telephone Contacts</string>
    <string name="contacts_digital">Digital Contacts</string>
    <string name="gec">Consular Emergency Office</string>
    <string name="ss">Social Security Line for clarifications on family assistance, sickness benefits and quarantine</string>
    <string name="sns">SNS 24 Line for screening symptoms and clarifying doubts about COVID-19</string>
    <string name="dgs">DGS platform for clarification on COVID-19</string>
    <string name="sns_duvidas">SNS 24 channel for clarification of doubts. Do not use for medical diagnosis</string>
    <string name="legislacao">Electronic Journal Area dedicated to pandemic legislation</string>
    <string name="legislacao_site">COVID19 Legislation</string>
    <string name="regiao">Confirmed Cases by Region</string>
    <string name="ars">Region</string>
    <string name="cases_conf">Confirmed Cases</string>
    <string name="date_reg">Registration date:</string>
    <string name="date_update">Data updated on</string>
    <string name="internet">No Internet connection...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>