<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard"
            />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_register"
            android:title="@string/register_test"
            />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/list_test"
            />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/contacts"
            />
    </group>

</menu>