<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".TestRegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="3dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_location"
                        android:layout_marginTop="35dp"
                        />


                    <TextView
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/danger"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginTop="40dp"/>

                    <io.github.dvegasa.arcpointer.ArcPointer
                        android:layout_weight="7"
                        android:id="@+id/arcpointer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        app:radius="85dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="3dp"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/date_hint"
                android:inputType="date"/>

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="3dp"
                android:textSize="20sp"
                />

            <RadioGroup
                android:id="@+id/result_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/positive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/positive" />

                <RadioButton
                    android:id="@+id/negative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/negative" />

            </RadioGroup>


            <TextView
                android:id="@+id/local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/local"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="3dp"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/local_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/local_hint"
                android:inputType="text"/>

            <TextView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="3dp"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/photo_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/photo_hint"
                android:inputType="text"/>

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/submit"
                android:background="@color/blue"
                android:textColor="@color/white"
                android:textSize="17sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>