<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TelephoneContactsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:theme="@style/AppTheme.AppBarOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/telephone_tab"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/contacts_tele"
                android:background="@color/blue"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/digital_tab"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/contacts_digital"
                android:background="@color/blue"
                android:textColor="@color/white"/>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/sns"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/number1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/blue"
            android:clickable="true"
            android:focusable="true"
            android:text="+351 808 24 24 24"
            android:tag="+351808242424"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/ss"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/number2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/blue"
            android:clickable="true"
            android:focusable="true"
            android:text="+351 300 502 502"
            android:tag="+351300502502"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/gec"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/number3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/blue"
            android:clickable="true"
            android:focusable="true"
            android:text="+351 217929714"
            android:tag="+351217929714"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/number4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/blue"
            android:clickable="true"
            android:focusable="true"
            android:text="+351 961706472"
            android:tag="+351961706472"
            android:textSize="17sp"/>

    </LinearLayout>

</LinearLayout>