<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_location"
                        android:layout_marginTop="35dp"
                        />


                    <TextView
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/danger"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginTop="40dp"/>

                    <io.github.dvegasa.arcpointer.ArcPointer
                        android:layout_weight="7"
                        android:id="@+id/arcpointer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        app:radius="85dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginBottom="3dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/detail_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="3dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/detail_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"

        />

    <TextView
        android:id="@+id/local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/local"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="3dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/detail_local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />

    <ImageView
        android:id="@+id/detail_photo"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>